# si

./: .gitignore  Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: e2e-validation.yml  soak-test.yml
app/auth-portal/: package.json
app/web/: package-lock.json  package.json
app/web/public/: _redirects
app/web/src/components/: AssetCard.vue  AssetDetailsPanel.vue  AssetFuncAttachModal.vue
app/web/src/organisms/: GlobalStatusOverlay.vue
app/web/src/store/: apis.ts  asset.store.ts  change_sets.store.ts  component_attributes.store.ts  components.store.ts  status.store.ts
dev/: Tiltfile  docker-compose.platform.yml
dev/otel-col-config/: config.yaml
lib/config-file/: Cargo.toml
lib/council-client/: BUCK  Cargo.toml
lib/council-client/examples/simple/: BUCK  main.rs
lib/council-client/src/: lib.rs
lib/council-core/: BUCK  Cargo.toml
lib/council-core/src/: kv.rs  lib.rs
lib/council-server/src/: app_state.rs  config.rs  kv.rs  lib.rs  server.rs  state_machine.rs
lib/council-server/src/server/: extract.rs  handlers.rs
lib/dal/: BUCK  Cargo.toml
lib/dal-test/: BUCK  Cargo.toml
lib/dal-test/src/: lib.rs
lib/dal/src/: action.rs  cached_module.rs  component.rs  context.rs  func.rs  lib.rs  standard_pk.rs  status.rs  workspace.rs  workspace_snapshot.rs  ws_event.rs
lib/dal/src/attribute/: value.rs
lib/dal/src/component/: florp.rs
lib/dal/src/job/: consumer.rs
lib/dal/src/migrations/: U0762__status_updates.sql  U3300__add_on_demand_flag_to_workspaces.sql  U3301__cached_modules.sql
lib/dal/src/provider/: external.rs  internal.rs
lib/dal/src/queries/: status_update_list_active.sql
lib/dal/src/schema/: variant.rs
lib/dal/src/socket/: debug.rs
lib/dal/src/workspace_snapshot/: component_family_tree.rs  graph.rs
lib/naxum/src/: response.rs
lib/pinga-server/: Cargo.toml
lib/pinga-server/src/: server.rs
lib/rebaser-core/src/: api_types.rs
lib/rebaser-server/src/: change_set_processor_task.rs  change_set_requests.rs  config.rs  handlers.rs  lib.rs  middleware.rs
lib/sdf-server/src/: migrations.rs
lib/si-data-nats/src/: lib.rs
lib/si-firecracker/: BUCK  Cargo.toml
lib/si-firecracker/src/: disk.rs  errors.rs  firecracker.rs  lib.rs  network.rs
lib/si-frontend-types-rs/src/: schema_variant.rs
lib/si-layer-cache/src/: activities.rs
lib/si-pkg/src/spec/: prop.rs  (+1 more)
lib/si-pool-noodle/: BUCK  Cargo.toml
lib/si-pool-noodle/src/: pool_noodle.rs
lib/si-test-macros/src/: dal_test.rs  expand.rs  sdf_test.rs
(+33 files in other folders)
