[package]
name = "council-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
publish = false

[dependencies]
council-core = { path = "../../lib/council-core" }
futures = { workspace = true }
parking_lot = { workspace = true }
remain = { workspace = true }
serde_json = { workspace = true }
si-data-nats = { path = "../../lib/si-data-nats" }
telemetry = { path = "../../lib/telemetry-rs" }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
