[package]
name = "si-firecracker"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
bollard = { workspace = true }
buck2-resources = { path = "../buck2-resources" }
crossbeam-queue = { workspace = true}
cyclone-client = { path = "../cyclone-client" }
cyclone-core = { path = "../cyclone-core" }
derive_builder = { workspace = true }
devicemapper = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
ipnetwork = { workspace = true }
iptables = { workspace = true }
loopdev = { workspace = true }
nix = { workspace = true }
netlink-packet-route = { workspace = true }
netns-rs = { workspace = true }
rand = {workspace = true }
remain = { workspace = true }
rtnetlink = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true }
sysctl = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tun-tap = { workspace = true }

[build-dependencies]
pkg-config = "0.3.30"

[dev-dependencies]
buck2-resources = { path = "../buck2-resources" }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
veritech-server = { path = "../veritech-server" }
